--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,8 +6,6 @@ services:
     restart: always
     env_file:
       - .env
-    ports:
-      - "5000:5000"
     depends_on:
       - mysql
 
@@ -20,5 +18,20 @@ services:
     volumes:
       - mydatabase:/var/lib/mysql
 
+  nginx:
+    container_name: nginx
+    image: jonasal/nginx-certbot
+    restart: always
+    environment:
+      - CERTBOT_EMAIL=ebsonari@gmail.com
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - nginx_secrets:/etc/letsencrypt
+      - ./user_conf.d:/etc/nginx/user_conf.d
+    depends_on:
+      - myport
 volumes:
   mydatabase:
+  nginx_secrets:
