--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,7 @@ jobs:
                 SSH_USER:  ${{ secrets.SSH_USER }}
                 SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY }}
                 SSH_IP: ${{ secrets.SSH_IP }}
-            - name: Print project root dir
-              run: ssh my-vps 'cd ${{ secrets.PROJECT_ROOT }} && pwd'
+            - name: Redeploy on VPS
+              run: |
+                ssh my-vps 'cd ~/mlhportfolio && chmod +x ./scripts/redeploy.sh \
+                && ./scripts/redeploy.sh'
